商品详细信息

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -64,4 +64,14 @@
     <servlet-name>ProductListByCidServlet</servlet-name>
     <url-pattern>/productListByCid</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ProductInfoServlet</display-name>
+    <servlet-name>ProductInfoServlet</servlet-name>
+    <servlet-class>com.itheima.web.servlet.ProductInfoServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ProductInfoServlet</servlet-name>
+    <url-pattern>/productInfo</url-pattern>
+  </servlet-mapping>
 </web-app>
