--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -6,72 +6,32 @@
   </welcome-file-list>
   <servlet>
     <description></description>
-    <display-name>RegisterServlet</display-name>
-    <servlet-name>RegisterServlet</servlet-name>
-    <servlet-class>com.itheima.web.servlet.RegisterServlet</servlet-class>
+    <display-name>ProductServlet</display-name>
+    <servlet-name>ProductServlet</servlet-name>
+    <servlet-class>com.itheima.web.servlet.ProductServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>RegisterServlet</servlet-name>
-    <url-pattern>/register</url-pattern>
+    <servlet-name>ProductServlet</servlet-name>
+    <url-pattern>/product</url-pattern>
   </servlet-mapping>
   <servlet>
     <description></description>
-    <display-name>ActiveServlet</display-name>
-    <servlet-name>ActiveServlet</servlet-name>
-    <servlet-class>com.itheima.web.servlet.ActiveServlet</servlet-class>
+    <display-name>UserServlet</display-name>
+    <servlet-name>UserServlet</servlet-name>
+    <servlet-class>com.itheima.web.servlet.UserServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>ActiveServlet</servlet-name>
-    <url-pattern>/active</url-pattern>
+    <servlet-name>UserServlet</servlet-name>
+    <url-pattern>/user</url-pattern>
   </servlet-mapping>
   <servlet>
     <description></description>
-    <display-name>CheckUsernameServlet</display-name>
-    <servlet-name>CheckUsernameServlet</servlet-name>
-    <servlet-class>com.itheima.web.servlet.CheckUsernameServlet</servlet-class>
+    <display-name>BaseServlet</display-name>
+    <servlet-name>BaseServlet</servlet-name>
+    <servlet-class>com.itheima.web.servlet.BaseServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>CheckUsernameServlet</servlet-name>
-    <url-pattern>/checkUsername</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>IndexServlet</display-name>
-    <servlet-name>IndexServlet</servlet-name>
-    <servlet-class>com.itheima.web.servlet.IndexServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>IndexServlet</servlet-name>
-    <url-pattern>/index</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>CategoryListServlet</display-name>
-    <servlet-name>CategoryListServlet</servlet-name>
-    <servlet-class>com.itheima.web.servlet.CategoryListServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>CategoryListServlet</servlet-name>
-    <url-pattern>/categoryList</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>ProductListByCidServlet</display-name>
-    <servlet-name>ProductListByCidServlet</servlet-name>
-    <servlet-class>com.itheima.web.servlet.ProductListByCidServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>ProductListByCidServlet</servlet-name>
-    <url-pattern>/productListByCid</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>ProductInfoServlet</display-name>
-    <servlet-name>ProductInfoServlet</servlet-name>
-    <servlet-class>com.itheima.web.servlet.ProductInfoServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>ProductInfoServlet</servlet-name>
-    <url-pattern>/productInfo</url-pattern>
+    <servlet-name>BaseServlet</servlet-name>
+    <url-pattern>/BaseServlet</url-pattern>
   </servlet-mapping>
 </web-app>
